# otus_02

./: .travis.yml  CMakeLists.txt
include/: IpFilter.h  version.h
include/tests/: main_test.h
src/: IpFilter.cpp  ip_filter.cpp  main.cpp
src/tests/: main_test.cpp
